Makes FilterOperation ALPHA_THRESHOLD and deps use a vector of Rects and not SkRegion

Changes the FilterOperation to keep a shape in a vector<gfx::Rect>.
Adds serialization support to cc.mojom.FilterOperation.
Plumbs new signatures through Widget, NativeWidget and WindowTreeHost
and ui::Layer.
Updates the OverviewMode (ScopedTransformOverviewWindow::HideHeader) to
use the new method of supplying alpha shape.

Bug: 754796
Test: browser_tests --gtest_filter=AppWindowApiTest.SetShapeHasPerm --mus
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Idb3dfd30c7e238a18d9c4ea8f2249c184d50258c