cc/trees/layer_tree_host_pixeltest_filters.cc
@@ -195,9 +195,9 @@ class LayerTreeHostFiltersScaledPixelTest
     // Add an alpha threshold filter to the blue layer which will filter out
     // everything except the lower right corner.
     FilterOperations filters;
-    SkRegion alpha_region;
-    alpha_region.setRect(
-        half_content, half_content, content_size, content_size);
+    FilterOperation::ShapeRects alpha_region;
+    alpha_region.push_back(gfx::Rect(
+        half_content, half_content, content_size, content_size));
     filters.Append(
         FilterOperation::CreateAlphaThresholdFilter(alpha_region, 1.f, 0.f));
     foreground->SetFilters(filters);
@@ -838,9 +838,9 @@ class EnlargedTextureWithAlphaThresholdFilter
 
     rect1.Inset(-5, -5);
     rect2.Inset(-5, -5);
-    SkRegion alpha_region;
-    SkIRect rects[2] = {gfx::RectToSkIRect(rect1), gfx::RectToSkIRect(rect2)};
-    alpha_region.setRects(rects, 2);
+    FilterOperation::ShapeRects alpha_region;
+    alpha_region.push_back(rect1);
+    alpha_region.push_back(rect2);
     FilterOperations filters;
     filters.Append(
         FilterOperation::CreateAlphaThresholdFilter(alpha_region, 0.f, 0.f));
