ui/views/widget/desktop_aura/desktop_window_tree_host.h
@@ -96,7 +96,7 @@ class VIEWS_EXPORT DesktopWindowTreeHost {
 
   // Sets the shape of the root window. If |native_region| is NULL then the
   // window reverts to rectangular.
-  virtual void SetShape(std::unique_ptr<SkRegion> native_region) = 0;
+  virtual void SetShape(std::unique_ptr<Widget::ShapeRects> native_region) = 0;
 
   virtual void Activate() = 0;
   virtual void Deactivate() = 0;
